--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <title>WORKBENCH HTML</title>
   </head>
   <body>
-    <h1>Annoying Button</h1>
-
-    <button>TRY to click me</button>
+    <h1>Pick a color</h1>
+    <section id="boxes"></section>
     <script src="index.js"></script>
   </body>
 </html>
