added a really basic shopping list

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <title>WORKBENCH HTML</title>
   </head>
   <body>
-    <h1>Pick a color</h1>
-    <section id="boxes"></section>
+    <h3>Shopping list</h3>
+    <input type="text" id="addItem" placeholder="Enter a food" />
+    <ul id="items"></ul>
     <script src="index.js"></script>
   </body>
 </html>
