added a test with axios and SWAPI api

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h3>Shopping list</h3>
     <input type="text" id="addItem" placeholder="Enter a food" />
     <ul id="items"></ul>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+
     <script src="index.js"></script>
   </body>
 </html>
