--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="style.css" />
-    <title>WORKBENCH HTML</title>
+    <title>Password generator</title>
   </head>
   <body>
-    <h3>Shopping list</h3>
-    <input type="text" id="addItem" placeholder="Enter a food" />
-    <ul id="items"></ul>
-    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <div class="container">
+      <h1>Contraseñas</h1>
+    </div>
 
-    <script src="index.js"></script>
+    <script src="passwordGenerator.js"></script>
   </body>
 </html>
