--- a/projects/Movie Comparison/index.html
+++ b/projects/Movie Comparison/index.html
@@ -26,10 +26,20 @@
       </div>
     </section>
     <div class="container">
-      <div class="autocomplete"></div>
-
-
-      <div id="summary"></div>
+      <div class="columns">
+        <div class="column">
+          <div id="left-autocomplete"></div>
+          <div id="left-summary"></div>
+        </div>
+        <div class="column">
+          <div id="right-autocomplete"></div>
+          <div id="right-summary"></div>
+        </div>
+      </div>
+      <div class="column is-half notification is-primary tutorial">
+        <h1 class="title">Search for a movie in both sides</h1>
+        <p class="subtitle">We will compare some stats!</p>
+      </div>
     </div>
     <script src="utils.js"></script>
     <script src="autocomplete.js"></script>
