--- a/projects/Maze/index.html
+++ b/projects/Maze/index.html
@@ -3,14 +3,45 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Righteous&display=swap"
+      rel="stylesheet"
+    />
+
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.14.2/matter.min.js"
       integrity="sha256-Bmvb4pJWin8rqq3GnwPz/hxBtqXaMdZHJnHYlpRULa4="
       crossorigin="anonymous"
     ></script>
+    <style>
+      body {
+        margin: 0;
+        font-family: "Righteous", cursive;
+      }
+      .hidden {
+        display: none !important;
+      }
+
+      h1 {
+        color: white;
+        font-size: 64px;
+      }
+      .winner {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: absolute;
+        z-index: 1;
+        height: 100vh;
+        width: 100vw;
+      }
+    </style>
     <title>Maze</title>
   </head>
   <body>
+    <div class="winner hidden">
+      <h1>You win!</h1>
+    </div>
     <script src="index.js"></script>
   </body>
 </html>
